; ModuleID = '/home/carl/AnghaBench/git/extr_trailer.c_unfold_value.c'
source_filename = "/home/carl/AnghaBench/git/extr_trailer.c_unfold_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64, i8* }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*)* @unfold_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unfold_value(%struct.strbuf* %0) #0 {
  %2 = alloca %struct.strbuf*, align 8
  %3 = alloca %struct.strbuf, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8, align 1
  store %struct.strbuf* %0, %struct.strbuf** %2, align 8
  %6 = bitcast %struct.strbuf* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %6, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 16, i1 false)
  %7 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %8 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = call i32 @strbuf_grow(%struct.strbuf* %3, i64 %9)
  store i64 0, i64* %4, align 8
  br label %11

11:                                               ; preds = %54, %1
  %12 = load i64, i64* %4, align 8
  %13 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %14 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ult i64 %12, %15
  br i1 %16, label %17, label %55

17:                                               ; preds = %11
  %18 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %19 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %18, i32 0, i32 1
  %20 = load i8*, i8** %19, align 8
  %21 = load i64, i64* %4, align 8
  %22 = add i64 %21, 1
  store i64 %22, i64* %4, align 8
  %23 = getelementptr inbounds i8, i8* %20, i64 %21
  %24 = load i8, i8* %23, align 1
  store i8 %24, i8* %5, align 1
  %25 = load i8, i8* %5, align 1
  %26 = sext i8 %25 to i32
  %27 = icmp eq i32 %26, 10
  br i1 %27, label %28, label %51

28:                                               ; preds = %17
  br label %29

29:                                               ; preds = %46, %28
  %30 = load i64, i64* %4, align 8
  %31 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %32 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = icmp ult i64 %30, %33
  br i1 %34, label %35, label %44

35:                                               ; preds = %29
  %36 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %37 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %36, i32 0, i32 1
  %38 = load i8*, i8** %37, align 8
  %39 = load i64, i64* %4, align 8
  %40 = getelementptr inbounds i8, i8* %38, i64 %39
  %41 = load i8, i8* %40, align 1
  %42 = call i64 @isspace(i8 signext %41)
  %43 = icmp ne i64 %42, 0
  br label %44

44:                                               ; preds = %35, %29
  %45 = phi i1 [ false, %29 ], [ %43, %35 ]
  br i1 %45, label %46, label %49

46:                                               ; preds = %44
  %47 = load i64, i64* %4, align 8
  %48 = add i64 %47, 1
  store i64 %48, i64* %4, align 8
  br label %29

49:                                               ; preds = %44
  %50 = call i32 @strbuf_addch(%struct.strbuf* %3, i8 signext 32)
  br label %54

51:                                               ; preds = %17
  %52 = load i8, i8* %5, align 1
  %53 = call i32 @strbuf_addch(%struct.strbuf* %3, i8 signext %52)
  br label %54

54:                                               ; preds = %51, %49
  br label %11

55:                                               ; preds = %11
  %56 = call i32 @strbuf_trim(%struct.strbuf* %3)
  %57 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %58 = call i32 @strbuf_swap(%struct.strbuf* %3, %struct.strbuf* %57)
  %59 = call i32 @strbuf_release(%struct.strbuf* %3)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_grow(%struct.strbuf*, i64) #2

declare dso_local i64 @isspace(i8 signext) #2

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i8 signext) #2

declare dso_local i32 @strbuf_trim(%struct.strbuf*) #2

declare dso_local i32 @strbuf_swap(%struct.strbuf*, %struct.strbuf*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
